fabrik/internal/engine/testdata/migrations_missing_deps.txt
A migrate command consuming migrations without the app providing *sql.DB
and migrations.Dialect gets the standard unresolved-dependency
diagnostics at the command, with recipes for both.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/cli v0.0.0

replace github.com/gofabrik/fabrik/cli => CLIDIR

require github.com/gofabrik/fabrik/migrations v0.0.0

replace github.com/gofabrik/fabrik/migrations => MIGRATIONSDIR
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- shared/hooks.go --
package shared

import (
	"database/sql"

	"github.com/gofabrik/fabrik/migrations"

	"github.com/gofabrik/fabrik/cli"
)

//fabrik:cli:command
func MigrateDB(ctx cli.Context, db *sql.DB, d migrations.Dialect, src migrations.Sources) error {
	return src.Migrate(ctx, db, d)
}
-- shared/migrations.go --
package shared

import "embed"

//fabrik:migrations
//go:embed all:migrations
var Migrations embed.FS
-- shared/migrations/0001_users.sql --
CREATE TABLE users (id INTEGER PRIMARY KEY);
-- want/diags --
error: shared/hooks.go:11:1: no provider for *sql.DB
  help: add a //fabrik:provider returning *sql.DB
error: shared/hooks.go:11:1: no provider for migrations.Dialect
  help: add a //fabrik:provider returning migrations.Dialect
